[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["migration"]

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tokio = { version = "1.30.0", features = ["full"] }
